--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,68 @@
 <!DOCTYPE html>
-<html lang="si">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WA DP Downloader</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
+  <title>ULTIMATE 18+ DOWNLOADER</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; font-family: 'Segoe UI', sans-serif; }
-    .card { border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
-    .btn-success { background: #25d366; border: none; }
-    .btn-success:hover { background: #1da851; }
-    .result-img { max-width: 100%; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-    .footer { margin-top: 50px; color: #ddd; font-size: 0.9em; }
+    body { background: linear-gradient(135deg, #ff006e, #8338ec); color: white; min-height: 100vh; }
+    .card { background: rgba(0,0,0,0.8); border: none; }
+    .btn-danger { background: #ff006e; }
+    .progress { height: 25px; }
   </style>
 </head>
-<body class="text-white">
+<body>
 <div class="container py-5">
-  <div class="text-center mb-4">
-    <h1><i class="fab fa-whatsapp text-success"></i> WA DP Downloader</h1>
-    <p class="lead">Public WhatsApp Profile Pictures Download කරන්න</p>
-  </div>
+  <h1 class="text-center mb-4">ULTIMATE 18+ VIDEO DOWNLOADER</h1>
+  <p class="text-center">50+ Sites • HD/4K • 100% Success</p>
 
-  <div class="card bg-dark text-white p-4">
-    <div class="mb-3">
-      <label class="form-label">Phone Number (Country Code සහිත)</label>
-      <input type="text" id="number" class="form-control form-control-lg" placeholder="94771234567" />
-      <small class="text-muted">Example: Sri Lanka → 9477...</small>
+  <div class="card p-4">
+    <input type="url" id="url" class="form-control form-control-lg mb-3" placeholder="Paste any 18+ video URL">
+    <button onclick="startDownload()" class="btn btn-danger btn-lg w-100">DOWNLOAD NOW</button>
+    <div id="status" class="mt-3 text-center"></div>
+    <div id="progress" class="mt-3" style="display:none;">
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:100%">Extracting...</div>
+      </div>
     </div>
-
-    <button onclick="getDP()" class="btn btn-success btn-lg w-100 mb-3">
-      <i class="fas fa-search"></i> Get Profile Picture
-    </button>
-
-    <div id="result" class="text-center"></div>
   </div>
 
-  <div class="footer text-center">
-    <p>Made with <i class="fas fa-heart text-danger"></i> | <a href="#" class="text-white">GitHub</a></p>
-    <p class="text-warning">Public profiles විතරයි work වෙන්නේ. Private DPs නැහැ.</p>
+  <div class="mt-4 text-center small">
+    <p>Supported: Pornhub, Xvideos, Xhamster, SpankBang, BangBros, Vixen, Tushy, Blacked, NaughtyAmerica + 40 more!</p>
   </div>
 </div>
 
 <script>
-async function getDP() {
-  const number = document.getElementById('number').value.trim();
-  const result = document.getElementById('result');
+async function startDownload() {
+  const url = document.getElementById('url').value.trim();
+  const status = document.getElementById('status');
+  const progress = document.getElementById('progress');
+  
+  if (!url) return status.innerHTML = '<p class="text-danger">URL දාන්න!</p>';
 
-  if (!number) {
-    result.innerHTML = `<p class="text-danger">Number එක දාන්න! 😤</p>`;
-    return;
-  }
-
-  result.innerHTML = `<p class="text-info"><i class="fas fa-spinner fa-spin"></i> Loading...</p>`;
+  status.innerHTML = '<p class="text-info">Extracting video source...</p>';
+  progress.style.display = 'block';
 
   try {
-    const res = await fetch('/get-dp', {
+    const res = await fetch('/download', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ number })
+      body: JSON.stringify({ url })
     });
     const data = await res.json();
 
-    if (data.success) {
-      result.innerHTML = `
-        <img src="${data.url}" class="result-img mt-3" alt="DP">
-        <br><br>
-        <a href="${data.url}" download="whatsapp-dp-${number}.jpg" class="btn btn-success">
-          <i class="fas fa-download"></i> Download HD
-        </a>
-        <p class="mt-2 text-success"><i class="fas fa-check-circle"></i> Success!</p>
+    if (data.success && data.downloadUrl) {
+      status.innerHTML = `
+        <p class="text-success">Ready! <a href="${data.downloadUrl}" download class="btn btn-success btn-lg mt-2">
+          DOWNLOAD HD VIDEO
+        </a></p>
       `;
+      progress.style.display = 'none';
     } else {
-      result.innerHTML = `<p class="text-danger"><i class="fas fa-times-circle"></i> ${data.error}</p>`;
+      status.innerHTML = `<p class="text-danger">${data.error}</p>`;
+      progress.style.display = 'none';
     }
-  } catch (err) {
-    result.innerHTML = `<p class="text-danger">Server error. Try again later.</p>`;
+  } catch {
+    status.innerHTML = '<p class="text-danger">Server error!</p>';
   }
 }
 </script>
