--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background: #0d0d0d; color: #fff; min-height: 100vh; }
-    .card { background: #1a1a1a; border: 1px solid #333; }
-    .btn-danger { background: #e91e63; border: none; }
-    .btn-danger:hover { background: #c2185b; }
+    body { background: #000; color: #fff; min-height: 100vh; font-family: Arial; }
+    .card { background: #111; border: 1px solid #333; border-radius: 15px; }
+    .btn-danger { background: #ff1744; border: none; }
+    .btn-success { background: #00e676; border: none; }
   </style>
 </head>
 <body class="p-4">
 <div class="container">
   <h1 class="text-center mb-4">18+ Video Downloader</h1>
-  <p class="text-center text-muted">Pornhub • Xvideos • Xhamster • SpankBang + More</p>
+  <p class="text-center text-muted mb-4">Pornhub • Xvideos • Xhamster • SpankBang + More</p>
 
   <div class="card p-4">
     <input type="url" id="url" class="form-control form-control-lg mb-3" placeholder="Paste video URL here">
     <button onclick="download()" class="btn btn-danger btn-lg w-100">DOWNLOAD NOW</button>
     <div id="result" class="mt-4 text-center"></div>
+  </div>
+
+  <div class="mt-4 text-center small text-muted">
+    <p>Personal use only • 18+ only</p>
   </div>
 </div>
 
@@ -29,7 +33,7 @@ async function download() {
   const result = document.getElementById('result');
   if (!url) return result.innerHTML = '<p class="text-danger">URL දාන්න!</p>';
 
-  result.innerHTML = '<p class="text-info">Extracting video...</p>';
+  result.innerHTML = '<p class="text-info">Extracting video source...</p>';
 
   try {
     const res = await fetch('/api/download', {
@@ -41,7 +45,7 @@ async function download() {
 
     if (data.success) {
       result.innerHTML = `
-        <p class="text-success">Ready!</p>
+        <p class="text-success mb-2">Ready!</p>
         <a href="${data.downloadUrl}" download class="btn btn-success btn-lg w-100">
           DOWNLOAD HD VIDEO
         </a>
@@ -49,8 +53,8 @@ async function download() {
     } else {
       result.innerHTML = `<p class="text-danger">${data.error}</p>`;
     }
-  } catch {
-    result.innerHTML = '<p class="text-danger">Server error. Try again!</p>';
+  } catch (err) {
+    result.innerHTML = '<p class="text-danger">Network error. Try again!</p>';
   }
 }
 </script>
